tests/snapshots/customer_sync_test__conflict_exception_when_existing_customer_is_company.snap
---
source: tests/customer_sync_test.rs
expression: to_assert
---
BEFORE:
Fake Database.
All Customers {
Customer {
    external_id: Some(
        "12345",
    ),
    master_external_id: None,
    company_number: Some(
        "32423-342",
    ),
    internal_id: Some(
        "45435",
    ),
    name: None,
    customer_type: Some(
        Company,
    ),
    preferred_store: None,
    address: None,
    shopping_lists: [],
}

}
All Shopping Lists
[]
SYNCING THIS:
ExternalCustomer {
    external_id: Some(
        "12345",
    ),
    company_number: None,
    name: Some(
        "Joe Bloggs",
    ),
    preferred_store: Some(
        "Nordstan",
    ),
    address: Some(
        Address {
            street: "123 main st",
            postal_code: "SE-123 45",
            city: "Stockholm",
        },
    ),
    shopping_lists: [
        ShoppingList {
            products: [
                "lipstick",
                "foundation",
            ],
        },
    ],
}
AFTER:
Fake Database.
All Customers {
Customer {
    external_id: Some(
        "12345",
    ),
    master_external_id: None,
    company_number: Some(
        "32423-342",
    ),
    internal_id: Some(
        "45435",
    ),
    name: None,
    customer_type: Some(
        Company,
    ),
    preferred_store: None,
    address: None,
    shopping_lists: [],
}

}
All Shopping Lists
[]
