tests/snapshots/customer_sync_test__conflict_exception_when_existing_customer_is_person.snap
---
source: tests/customer_sync_test.rs
expression: to_assert
---
BEFORE:
Fake Database.
All Customers {
Customer {
    external_id: Some(
        "12345",
    ),
    master_external_id: None,
    company_number: None,
    internal_id: Some(
        "45435",
    ),
    name: None,
    customer_type: Some(
        Person,
    ),
    preferred_store: None,
    address: None,
    shopping_lists: [],
}

}
All Shopping Lists
[]
SYNCING THIS:
ExternalCustomer {
    external_id: Some(
        "12345",
    ),
    company_number: Some(
        "470813-8895",
    ),
    name: Some(
        "Acme Inc.",
    ),
    preferred_store: None,
    address: Some(
        Address {
            street: "123 main st",
            postal_code: "SE-123 45",
            city: "Helsingborg",
        },
    ),
    shopping_lists: [
        ShoppingList {
            products: [
                "lipstick",
                "blusher",
            ],
        },
    ],
}
AFTER:
Fake Database.
All Customers {
Customer {
    external_id: Some(
        "12345",
    ),
    master_external_id: None,
    company_number: None,
    internal_id: Some(
        "45435",
    ),
    name: None,
    customer_type: Some(
        Person,
    ),
    preferred_store: None,
    address: None,
    shopping_lists: [],
}

}
All Shopping Lists
[]
