tests/snapshots/customer_sync_test__sync_company_by_external_id.snap
---
source: tests/customer_sync_test.rs
expression: to_assert
---
BEFORE:
Fake Database.
All Customers {
Customer {
    external_id: Some(
        "12345",
    ),
    master_external_id: None,
    name: None,
    company_number: Some(
        "470813-8895",
    ),
    customer_type: Some(
        Company,
    ),
    internal_id: Some(
        "45435",
    ),
    address: None,
    shopping_lists: [],
    preferred_store: None,
}


All Shopping Lists
[]
SYNCING THIS:
ExternalCustomer {
    address: Some(
        Address {
            street: "123 main st",
            city: "Helsingborg",
            postal_code: "SE-123 45",
        },
    ),
    name: Some(
        "Acme Inc.",
    ),
    preferred_store: None,
    shopping_lists: [
        ShoppingList {
            products: [
                "lipstick",
                "blusher",
            ],
        },
    ],
    external_id: Some(
        "12345",
    ),
    company_number: Some(
        "470813-8895",
    ),
}
AFTER:
Fake Database.
All Customers {
Customer {
    external_id: Some(
        "12345",
    ),
    master_external_id: None,
    name: Some(
        "Acme Inc.",
    ),
    company_number: Some(
        "470813-8895",
    ),
    customer_type: Some(
        Company,
    ),
    internal_id: Some(
        "45435",
    ),
    address: Some(
        Address {
            street: "123 main st",
            city: "Helsingborg",
            postal_code: "SE-123 45",
        },
    ),
    shopping_lists: [
        ShoppingList {
            products: [
                "lipstick",
                "blusher",
            ],
        },
    ],
    preferred_store: None,
}


All Shopping Lists
[
    ShoppingList {
        products: [
            "lipstick",
            "blusher",
        ],
    },
]
