tests/snapshots/customer_sync_test__sync_company_by_external_id_with_non_matching_master_id.snap
---
source: tests/customer_sync_test.rs
expression: to_assert
---
BEFORE:
Fake Database.
All Customers {
Customer {
    external_id: Some(
        "12345",
    ),
    master_external_id: None,
    company_number: Some(
        "470813-8895",
    ),
    internal_id: Some(
        "45435",
    ),
    name: Some(
        "company 1",
    ),
    customer_type: Some(
        Company,
    ),
    preferred_store: None,
    address: None,
    shopping_lists: [],
}
Customer {
    external_id: None,
    master_external_id: Some(
        "12345",
    ),
    company_number: Some(
        "470813-8895",
    ),
    internal_id: Some(
        "45435234",
    ),
    name: Some(
        "company 2",
    ),
    customer_type: Some(
        Company,
    ),
    preferred_store: None,
    address: None,
    shopping_lists: [],
}

}
All Shopping Lists
[]
SYNCING THIS:
ExternalCustomer {
    external_id: Some(
        "12345",
    ),
    company_number: Some(
        "470813-8895",
    ),
    name: Some(
        "Acme Inc.",
    ),
    preferred_store: None,
    address: Some(
        Address {
            street: "123 main st",
            postal_code: "SE-123 45",
            city: "Helsingborg",
        },
    ),
    shopping_lists: [
        ShoppingList {
            products: [
                "lipstick",
                "blusher",
            ],
        },
    ],
}
AFTER:
Fake Database.
All Customers {
Customer {
    external_id: Some(
        "12345",
    ),
    master_external_id: None,
    company_number: Some(
        "470813-8895",
    ),
    internal_id: Some(
        "45435",
    ),
    name: Some(
        "Acme Inc.",
    ),
    customer_type: Some(
        Company,
    ),
    preferred_store: None,
    address: Some(
        Address {
            street: "123 main st",
            postal_code: "SE-123 45",
            city: "Helsingborg",
        },
    ),
    shopping_lists: [
        ShoppingList {
            products: [
                "lipstick",
                "blusher",
            ],
        },
    ],
}
Customer {
    external_id: None,
    master_external_id: Some(
        "12345",
    ),
    company_number: Some(
        "470813-8895",
    ),
    internal_id: Some(
        "45435234",
    ),
    name: Some(
        "Acme Inc.",
    ),
    customer_type: Some(
        Company,
    ),
    preferred_store: None,
    address: None,
    shopping_lists: [],
}

}
All Shopping Lists
[
    ShoppingList {
        products: [
            "lipstick",
            "blusher",
        ],
    },
]
