tests/snapshots/customer_sync_test__sync_new_company_customer.snap
---
source: tests/customer_sync_test.rs
expression: to_assert
---
BEFORE:
Fake Database.
All Customers {

}
All Shopping Lists
[]
SYNCING THIS:
ExternalCustomer {
    external_id: Some(
        "12345",
    ),
    company_number: Some(
        "470813-8895",
    ),
    name: Some(
        "Acme Inc.",
    ),
    preferred_store: None,
    address: Some(
        Address {
            street: "123 main st",
            postal_code: "SE-123 45",
            city: "Helsingborg",
        },
    ),
    shopping_lists: [
        ShoppingList {
            products: [
                "lipstick",
                "blusher",
            ],
        },
    ],
}
AFTER:
Fake Database.
All Customers {
Customer {
    external_id: Some(
        "12345",
    ),
    master_external_id: Some(
        "12345",
    ),
    company_number: Some(
        "470813-8895",
    ),
    internal_id: Some(
        "fake internalId",
    ),
    name: Some(
        "Acme Inc.",
    ),
    customer_type: Some(
        Company,
    ),
    preferred_store: None,
    address: Some(
        Address {
            street: "123 main st",
            postal_code: "SE-123 45",
            city: "Helsingborg",
        },
    ),
    shopping_lists: [
        ShoppingList {
            products: [
                "lipstick",
                "blusher",
            ],
        },
    ],
}

}
All Shopping Lists
[
    ShoppingList {
        products: [
            "lipstick",
            "blusher",
        ],
    },
]
