tests/snapshots/customer_sync_test__sync_new_private_customer.snap
---
source: tests/customer_sync_test.rs
expression: to_assert
---
BEFORE:
Fake Database.
All Customers {

}
All Shopping Lists
[]
SYNCING THIS:
ExternalCustomer {
    external_id: Some(
        "12345",
    ),
    company_number: None,
    name: Some(
        "Joe Bloggs",
    ),
    preferred_store: Some(
        "Nordstan",
    ),
    address: Some(
        Address {
            street: "123 main st",
            postal_code: "SE-123 45",
            city: "Stockholm",
        },
    ),
    shopping_lists: [
        ShoppingList {
            products: [
                "lipstick",
                "foundation",
            ],
        },
    ],
}
AFTER:
Fake Database.
All Customers {
Customer {
    external_id: Some(
        "12345",
    ),
    master_external_id: Some(
        "12345",
    ),
    company_number: None,
    internal_id: Some(
        "fake internalId",
    ),
    name: Some(
        "Joe Bloggs",
    ),
    customer_type: Some(
        Person,
    ),
    preferred_store: Some(
        "Nordstan",
    ),
    address: Some(
        Address {
            street: "123 main st",
            postal_code: "SE-123 45",
            city: "Stockholm",
        },
    ),
    shopping_lists: [
        ShoppingList {
            products: [
                "lipstick",
                "foundation",
            ],
        },
    ],
}

}
All Shopping Lists
[
    ShoppingList {
        products: [
            "lipstick",
            "foundation",
        ],
    },
]
